--- a/YardiBackOfficeManager/YardiAIWeb/home.html
+++ b/YardiBackOfficeManager/YardiAIWeb/home.html
@@ -116,6 +116,11 @@
     </div>
     <div class="container">
         <p>Home Page</p>
+        <div class="row">
+            <div class="col-lg-4 col-md-4 col-sm-12">
+                <a href="app/additem.html">Add New Entry</a>
+            </div>
+        </div>
         <h3 id="sign-in-status"></h3>
         <div id="sign-in"></div>
         <div id="account-details"></div>
