--- a/YardiBackOfficeManager/YardiAIWeb/home.html
+++ b/YardiBackOfficeManager/YardiAIWeb/home.html
@@ -46,19 +46,6 @@
                     });
                     var htmldata = null;
 
-                    /*
-                    var tableRef = document.getElementById('myTable').getElementsByTagName('tbody')[0];
-
-  // Insert a row in the table at row index 0
-  var newRow   = tableRef.insertRow(tableRef.rows.length);
-
-  // Insert a cell in the row at index 0
-  var newCell  = newRow.insertCell(0);
-
-  // Append a text node to the cell
-  var newText  = document.createTextNode('New row')
-  newCell.appendChild(newText);
-                    */
                     var tblRef = document.getElementById('tbDataTable').getElementsByTagName('tbody')[0];
                     var newRow = null;
                     var newCell = null;
@@ -70,7 +57,7 @@
                             
                             var dataObj = childSnapshot.val();
                             var recID = childSnapshot.key;
-                            htmldata = "<tr><td><a href='#'>Edit</a></td><td><a href='#' class='btn btn-danger' style='color:white' onclick='DeleteItem('"+recID+"');return false;'>Delete</a></td><td><img src='" + dataObj.ImageURL + "' width='200' height='100' /></td><td>" + dataObj.Tags + "</td><td>" + dataObj.Latitude + "</td><td>" + dataObj.Longitude + "</td><td>" + dataObj.CreatedDate + "</td><td>" + dataObj.ModifiedDate + "</td></tr>";
+                            htmldata = "<tr><td><a href='#' class='btn btn-success' style='color:white'>Edit</a></td><td><a href='#' class='btn btn-danger' style='color:white' onclick=DeleteItem('" + recID + "','" + dataObj.ImageName+ "');return false;>Delete</a></td><td><img src='" + dataObj.ImageURL + "' width='200' height='100' /></td><td>" + dataObj.Tags + "</td><td>" + dataObj.Latitude + "</td><td>" + dataObj.Longitude + "</td><td>" + dataObj.CreatedDate + "</td><td>" + dataObj.ModifiedDate + "</td></tr>";
                             $('table tbody').append(htmldata);
                         });
                         
@@ -93,15 +80,24 @@
         function SignOut() {
             firebase.auth().signOut();
         }
-        function DeleteItem(RecordKey){
+        function DeleteItem(RecordKey, ImageName){
             var YesNo = confirm("Are you sure you want to delete this record?");
             if (YesNo)
             {
-                alert("Bye")
+                var dbRef = firebase.database().ref("YardTasks");
+                dbRef.child(RecordKey).remove();
+                var storageRef = firebase.storage().ref();
+                var refLoc = "images/" + ImageName + ""
+                var imageRef = storageRef.child(refLoc);
+                imageRef.delete().then(function () {
+                    console.log("File has been deleted")
+                }).catch(function (error) {
+                    alert("We have an error")
+                });
             }
             else
             {
-                alert("Easy there girl")
+                alert("Easy there young philly")
             }
         }
         window.addEventListener('load', function () {
