--- a/YardiBackOfficeManager/YardiAIWeb/app/additem.html
+++ b/YardiBackOfficeManager/YardiAIWeb/app/additem.html
@@ -189,11 +189,11 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav ml-auto">
-                    <li><a id="sign-in-status" class="nav-link"></a></li>
+                    <li><a id="sign-in-status" href="account.html" class="nav-link"></a></li>
                     <li class="nav-item active">
                         <a class="nav-link" href="#">
                             Home
-                            <span class="sr-only">(current)</span>
+                            
                         </a>
                     </li>
                     <li class="nav-item">
