--- a/YardiBackOfficeManager/YardiAIWeb/app/edititem.html
+++ b/YardiBackOfficeManager/YardiAIWeb/app/edititem.html
@@ -241,11 +241,11 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav ml-auto">
-                    <li><a id="sign-in-status" class="nav-link"></a></li>
+                    <li><a id="sign-in-status" href="account.html" class="nav-link"></a></li>
                     <li class="nav-item active">
-                        <a class="nav-link" href="#">
+                        <a class="nav-link" href="/home.html">
                             Home
-                            <span class="sr-only">(current)</span>
+                            
                         </a>
                     </li>
                     <li class="nav-item">
