--- a/YardiBackOfficeManager/YardiAIWeb/home.html
+++ b/YardiBackOfficeManager/YardiAIWeb/home.html
@@ -235,7 +235,7 @@ only screen and (max-width: 760px),
             </button>
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav ml-auto">
-                    <li><a id="sign-in-status" class="nav-link"></a></li>
+                    <li><a id="sign-in-status" href="account.html" class="nav-link"></a></li>
                     <li class="nav-item active">
                         <a class="nav-link" href="#">
                             Home
